--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
       </div>
       <div class="form-floating">
         <input type="text" id="sna" name="lName" class="form-control middle" placeholder="Last Name" required>
-        <label for="sna">Second Name</label>
+        <label for="sna">Last Name</label>
       </div>
       <div class="form-floating">
         <input type="email" id="ema" name="email" class="form-control bottom" placeholder="Email" required>
